--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-    <!-- Tela de Boas-vindas -->
+
+  <main class="conteudo-principal">
+        <!-- Tela de Boas-vindas -->
 <div id="tela-boas-vindas" class="tela-inicial">
     <h1>🎂 Feliz Aniversário Heloisa! 🎉</h1>
     <p>Tem uma surpresa esperando por você...</p>
@@ -209,7 +211,11 @@ function abrirSurpresa() {
   document.getElementById('btn-finalizar').style.display = 'none';
 }
 
-  
+
   </script>
+  </main>
+     <footer class="rodape">
+        Desenvolvido por Luana Garcia, 2025.
+      </footer>
 </body>
 </html>
