--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
 
-
-  <main class="conteudo-principal">
-        <!-- Tela de Boas-vindas -->
+    <!-- Tela de Boas-vindas -->
 <div id="tela-boas-vindas" class="tela-inicial">
     <h1>🎂 Feliz Aniversário Heloisa! 🎉</h1>
     <p>Tem uma surpresa esperando por você...</p>
@@ -28,7 +26,7 @@
   
 
   <!-- Raspadinha -->
-  <h1 id="titulo-jogo" style="display: none;">🎉 Raspadinha da Irmã 🎉</h1>
+  <h1 id="titulo-jogo" style="display: none;">🎉 Raspadinha da Helôh1>
   <p id="texto-jogo" style="display: none;">Raspe e descubra seu presente!💖</p>
   <div class="raspadinha" id="raspadinha" style="display: none;"></div>
   <p class="mensagem" id="mensagem" style="display: none;"></p>
@@ -211,11 +209,7 @@ function abrirSurpresa() {
   document.getElementById('btn-finalizar').style.display = 'none';
 }
 
-
+  
   </script>
-  </main>
-     <footer class="rodape">
-        Desenvolvido por Luana Garcia, 2025.
-      </footer>
 </body>
 </html>
