--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
 
   <!-- Raspadinha -->
-  <h1 id="titulo-jogo" style="display: none;">🎉 Raspadinha da Helôh1>
+  <h1 id="titulo-jogo" style="display: none;">🎉 Raspadinha da Helô 🎉</h1>
   <p id="texto-jogo" style="display: none;">Raspe e descubra seu presente!💖</p>
   <div class="raspadinha" id="raspadinha" style="display: none;"></div>
   <p class="mensagem" id="mensagem" style="display: none;"></p>
